# aquarium-cmocka

./: CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: cmake.yml  memcheck.yml
cmake/: FetchCMocka.cmake
include/test/: cmocka.h
include/test/cmocka/: pthread.h  stdlib.h  time.h
src/: pthread.c  stdlib.c  time.c
test/: test_cmocka.c  test_pthread.c  test_stdlib.c  test_time.c
